objects/Account/fields/Account_Identity__c.field-meta.xml
<CustomField>
    <fullName>Account_Identity__c</fullName>
    <label>Account Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Ship To</fullName>
            </value>
            <value>
                <fullName>Sold To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>