objects/Account/recordTypes/Account_Type.recordType-meta.xml
<RecordType>
    <fullName>Account_Type</fullName>
    <active>true</active>
    <label>Account Type</label>
</RecordType>