objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Account_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Channel__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Account_Identity__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>