objects/Account/listViews/NewLastWeek.listView-meta.xml
<ListView>
    <fullName>NewLastWeek</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Account_Identity__c</columns>
    <columns>Account_Channel__c</columns>
    <columns>Is_Active__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Customer_Classification__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>New Last Week</label>
</ListView>